--- a/index.html
+++ b/index.html
@@ -1694,7 +1694,7 @@
                 <div class="block-finder__image" style="background-image: url('images/finder-1903x500.jpg');"></div>
                 <div class="block-finder__body container container--max--xl">
                     <div class="block-finder__title">Поиск аналогов</div>
-                    <div class="block-finder__subtitle">Использование отечественного ПО в сфере проектирования зданий и сооружений.</div>
+                    <div class="block-finder__subtitle">Использование отечественного ПО в сфере проектирования зданий и сооружений</div>
                     <form class="block-finder__form">
                         <div class="block-finder__form-control block-finder__form-control--select">
                             <select name="year" aria-label="Vehicle Year">
