--- a/index.html
+++ b/index.html
@@ -1397,7 +1397,7 @@
     <script src="vendor/select2/js/select2.min.js"></script>
     <script src="js/number.js"></script>
     <script src="js/main.js"></script>
-    <script src="js/zv.js"></script>
+    <script src="js/zv-index.js"></script>
 </body>
 
 </html>
