--- a/product.html
+++ b/product.html
@@ -4577,6 +4577,7 @@
     <script src="vendor/select2/js/select2.min.js"></script>
     <script src="js/number.js"></script>
     <script src="js/main.js"></script>
+    <script src="js/zv-product.js"></script>
 </body>
 
 </html>
