--- a/product.html
+++ b/product.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="format-detection" content="telephone=no">
-    <title>Product Full — Red Parts</title>
+    <title>Поиск аналогов | Страница продукта</title>
     <link rel="icon" type="image/png" href="images/favicon.png">
     <!-- fonts -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:400,400i,500,500i,700,700i">
@@ -182,7 +182,7 @@
                                     </div>
                                     <div class="product__main">
                                         <div class="product__excerpt">
-                                            Короткое описание. Many philosophical debates that began in ancient times are still debated today.
+                                            Короткое описание.  Или значки реестра, страны и возможности покупки. Many philosophical debates that began in ancient times are still debated today.
                                             In one general sense, philosophy is associated with wisdom, intellectual culture and a search for knowledge.
                                         </div>
                                         <div class="product__features">
