--- a/search.html
+++ b/search.html
@@ -83,7 +83,7 @@
             <div class="block block-posts-carousel block-posts-carousel--layout--grid" data-layout="grid">
                 <div class="container">
                     
-                    <div class="products-view__list products-list products-list--grid--4" data-layout="list" data-with-features="false">
+                    <div class="products-view__list products-list products-list--grid--4 pb-3" data-layout="list" data-with-features="false">
                         <div class="products-list__head">
                             <div class="products-list__column products-list__column--image">Image</div>
                             <div class="products-list__column products-list__column--meta">SKU</div>
@@ -110,21 +110,16 @@
                                                     <div class="tag-badge tag-badge--new">new</div>
                                                     <div class="tag-badge tag-badge--hot">hot</div>
                                                 </div>
-                                                <a href="product-full.html">Brandix Spark Plug Kit ASR-400</a>
+                                                <a class="product-name" href="product-full.html">Brandix Spark Plug Kit ASR-400</a>
                                             </div>
                                         </div>
                                         <div class="product-card__features">
                                             <div class="row mb-4">
                                                 <div class="col-12 col-md-6">
-                                                    <p>Описание</p>
+                                                    <p class="description">Описание</p>
                                                 </div>
                                                 <div class="col-12 col-md-6">
-                                                    <ul>
-                                                        <li>Speed: 750 RPM</li>
-                                                        <li>Power Source: Cordless-Electric</li>
-                                                        <li>Battery Cell Type: Lithium</li>
-                                                        <li>Voltage: 20 Volts</li>
-                                                        <li>Battery Capacity: 2 Ah</li>
+                                                    <ul class="features">
                                                     </ul>
                                                 </div>
                                             </div>
