search. Подстановка параметров поиска

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <div class="block-finder__body container container--max--xl">
                     <div class="block-finder__title">Поиск аналогов</div>
                     <div class="block-finder__subtitle">Использование отечественного ПО в сфере проектирования зданий и сооружений</div>
-                    <form class="block-finder__form">
+                    <form class="block-finder__form" method="get" action="/search.html">
                         <div class="col">
                             <div class="row">
                                 <div class="block-finder__form-control block-finder__form-control--select">
