--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
                                     <div class="product-card product-card--layout--grid">
                                         <div class="product-card__image">
                                             <div class="image image--type--product">
-                                                <a href="product-full.html" class="image__body">
+                                                <a href="product-full.html" class="image__body zv-href-features">
                                                     <img class="image__tag" src="images/products/product-9-245x245.jpg" alt="">
                                                 </a>
                                             </div>
