Метки при поиске

--- a/search.html
+++ b/search.html
@@ -106,9 +106,9 @@
                                         <div class="product-card__name">
                                             <div>
                                                 <div class="product-card__badges">
-                                                    <div class="tag-badge tag-badge--sale">sale</div>
-                                                    <div class="tag-badge tag-badge--new">new</div>
-                                                    <div class="tag-badge tag-badge--hot">hot</div>
+                                                    <div class="tag-badge tag-badge--sale d-none">РУС</div>
+                                                    <div class="tag-badge tag-badge--new d-none">BUY</div>
+                                                    <div class="tag-badge tag-badge--hot d-none">REESTR</div>
                                                 </div>
                                                 <a class="product-name" href="product-full.html">Brandix Spark Plug Kit ASR-400</a>
                                             </div>
