Продукт. Фильтрация предлжений

--- a/product.html
+++ b/product.html
@@ -308,8 +308,8 @@
                                     </div>
                                     <div class="block-products-carousel__carousel">
                                         <div class="block-products-carousel__carousel-loader"></div>
-                                        <div class="owl-carousel">
-                                            <div class="block-products-carousel__column">
+                                        <div id="owl-carousel-2" class="owl-carousel">
+                                            <div class="block-products-carousel__column zv-features-prog">
                                                 <div class="block-products-carousel__cell">
                                                     <div class="product-card product-card--layout--grid">
                                                         <div class="product-card__image">
@@ -320,15 +320,15 @@
                                                             </div>
                                                         </div>
                                                         <div class="product-card__info pb-3">
-                                                            <div class="product-card__meta"><span class="product-card__meta-title">ID:</span> 140-10440-B</div>
+                                                            <div class="product-card__meta"><span class="product-card__meta-title">ID:</span> <div class="d-inline zv-f-src-id">6</div></div>
                                                             <div class="product-card__name">
                                                                 <div>
                                                                     <div class="product-card__badges">
-                                                                        <div class="tag-badge tag-badge--sale">sale</div>
-                                                                        <div class="tag-badge tag-badge--new">new</div>
-                                                                        <div class="tag-badge tag-badge--hot">hot</div>
+                                                                        <div class="tag-badge tag-badge--sale d-none">РУС</div>
+                                                                        <div class="tag-badge tag-badge--new d-none">BUY</div>
+                                                                        <div class="tag-badge tag-badge--hot d-none">REESTR</div>
                                                                     </div>
-                                                                    <a href="product-full.html">Brandix Spark Plug Kit ASR-400</a>
+                                                                    <a class="zv-f-src-name" href="product-full.html">Brandix Spark Plug Kit ASR-400</a>
                                                                 </div>
                                                             </div>
                                                         </div>
