--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
                                 которое официально признано происходящим из РФ
                             </span>
                             <span class="block-banners__item-button btn btn-primary btn-sm">
-                                Shop Now
+                                Перейти
                             </span>
                         </a>
                     </div>
