--- a/product.html
+++ b/product.html
@@ -28,54 +28,11 @@
     <div class="site">
         <!-- site__body -->
         <div class="site__body">
-            <div class="block-finder block">
-                <div class="decor block-finder__decor decor--type--bottom">
-                    <div class="decor__body">
-                        <div class="decor__start"></div>
-                        <div class="decor__end"></div>
-                        <div class="decor__center"></div>
-                    </div>
-                </div>
+            <div class="block-finder block" style="height: 200px;">
                 <div class="block-finder__image" style="background-image: url('images/finder-1903x500.jpg');"></div>
-                <div class="block-finder__body container container--max--xl">
+                <div class="block-finder__body container container--max--xl" style="margin-bottom: -40px;">
                     <div class="block-finder__title">Поиск аналогов</div>
                     <div class="block-finder__subtitle">Использование отечественного ПО в сфере проектирования зданий и сооружений</div>
-                    <form class="block-finder__form">
-                        <div class="col">
-                            <div class="row">
-                                <div class="block-finder__form-control block-finder__form-control--select">
-                                        <label for="floatingInput">Возможности программы</label>
-                                        <select class="js-example-basic-multiple zv-select-features" name="features[]" multiple="multiple">
-                                        </select>
-                                    
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="block-finder__form-control block-finder__form-control--select">
-                                    <select name="country" class="zv-select-country" aria-label="Vehicle Make">
-                                        <option value="none">Страна производитель</option>
-                                    </select>
-                                </div>
-                                <div class="block-finder__form-control block-finder__form-control--select">
-                                    <select class="zv-select-availability" name="availability" aria-label="Vehicle Model">
-                                        <option value="none">Доступность к покупке и использованию</option>
-                                        <option value="true">Да</option>
-                                        <option value="false">Нет</option>
-                                    </select>
-                                </div>
-                                <div class="block-finder__form-control block-finder__form-control--select">
-                                    <select class="zv-select-reestr" name="reestr" aria-label="Vehicle Model">
-                                        <option value="none">Наличие в Реестре</option>
-                                        <option value="true">Да</option>
-                                        <option value="false">Нет</option>
-                                    </select>
-                                </div>
-                            </div>
-                            <div class="row pt-2">
-                                <button class="btn btn-primary p-3 mx-2 w-100" type="submit">Подобрать</button>
-                            </div>
-                        </div>
-                    </form>
                 </div>
             </div>
             <div class="block-space block-space--layout--divider-nl"></div>
