--- a/product.html
+++ b/product.html
@@ -31,8 +31,8 @@
             <div class="block-finder block" style="height: 200px;">
                 <div class="block-finder__image" style="background-image: url('images/finder-1903x500.jpg');"></div>
                 <div class="block-finder__body container container--max--xl" style="margin-bottom: -40px;">
-                    <div class="block-finder__title">Поиск аналогов</div>
-                    <div class="block-finder__subtitle">Использование отечественного ПО в сфере проектирования зданий и сооружений</div>
+                    <div class="block-finder__title"><a style="color: white;" href="/"> Поиск аналогов</a></div>
+                    <div class="block-finder__subtitle"><a style="color: white;" href="/">Использование отечественного ПО в сфере проектирования зданий и сооружений</a></div>
                 </div>
             </div>
             <div class="block-space block-space--layout--divider-nl"></div>
