Изображения. И их отображение на странице

--- a/index.html
+++ b/index.html
@@ -180,9 +180,9 @@
                                 <div class="block-products-carousel__cell">
                                     <div class="product-card product-card--layout--grid">
                                         <div class="product-card__image">
-                                            <div class="image image--type--product">
+                                            <div class="image image--type--product" style="height: 10px;">
                                                 <a href="product-full.html" class="image__body zv-href-features">
-                                                    <img class="image__tag" src="images/products/product-9-245x245.jpg" alt="">
+                                                    <!-- <img class="image__tag" src="images/products/product-9-245x245.jpg" alt=""> -->
                                                 </a>
                                             </div>
                                         </div>
