--- a/product.html
+++ b/product.html
@@ -55,80 +55,38 @@
                                                 </svg>
                                             </button>
                                             <div class="owl-carousel">
-                                                <!--
-                The data-width and data-height attributes must contain the size of a larger version
-                of the product image.
-
-                If you do not know the image size, you can remove the data-width and data-height
-                attribute, in which case the width and height will be obtained from the naturalWidth
-                and naturalHeight property of img.image__tag.
-                -->
-                                                <a class="image image--type--product" href="images/products/product-2-700x700.jpg" target="_blank" data-width="700" data-height="700">
+                                                <a class="image image--type--product zv-img500" href="images/products/product-2-700x700.jpg" target="_blank" data-width="700" data-height="700">
                                                     <div class="image__body">
                                                         <img class="image__tag" src="images/products/product-2-500x500.jpg" alt="">
                                                     </div>
                                                 </a>
-                                                <!--
-                The data-width and data-height attributes must contain the size of a larger version
-                of the product image.
-
-                If you do not know the image size, you can remove the data-width and data-height
-                attribute, in which case the width and height will be obtained from the naturalWidth
-                and naturalHeight property of img.image__tag.
-                -->
-                                                <a class="image image--type--product" href="images/products/product-1-700x700.jpg" target="_blank" data-width="700" data-height="700">
+                                                <a class="image image--type--product zv-img500" href="images/products/product-1-700x700.jpg" target="_blank" data-width="700" data-height="700">
                                                     <div class="image__body">
                                                         <img class="image__tag" src="images/products/product-1-500x500.jpg" alt="">
                                                     </div>
                                                 </a>
-                                                <!--
-                The data-width and data-height attributes must contain the size of a larger version
-                of the product image.
-
-                If you do not know the image size, you can remove the data-width and data-height
-                attribute, in which case the width and height will be obtained from the naturalWidth
-                and naturalHeight property of img.image__tag.
-                -->
-                                                <a class="image image--type--product" href="images/products/product-3-700x700.jpg" target="_blank" data-width="700" data-height="700">
+                                                <a class="image image--type--product zv-img500" href="images/products/product-3-700x700.jpg" target="_blank" data-width="700" data-height="700">
                                                     <div class="image__body">
                                                         <img class="image__tag" src="images/products/product-3-500x500.jpg" alt="">
-                                                    </div>
-                                                </a>
-                                                <!--
-                The data-width and data-height attributes must contain the size of a larger version
-                of the product image.
-
-                If you do not know the image size, you can remove the data-width and data-height
-                attribute, in which case the width and height will be obtained from the naturalWidth
-                and naturalHeight property of img.image__tag.
-                -->
-                                                <a class="image image--type--product" href="images/products/product-4-700x700.jpg" target="_blank" data-width="700" data-height="700">
-                                                    <div class="image__body">
-                                                        <img class="image__tag" src="images/products/product-4-500x500.jpg" alt="">
                                                     </div>
                                                 </a>
                                             </div>
                                         </div>
                                         <div class="product-gallery__thumbnails">
                                             <div class="owl-carousel">
-                                                <div class="product-gallery__thumbnails-item image image--type--product">
+                                                <div class="product-gallery__thumbnails-item image image--type--product zv-img70">
                                                     <div class="image__body">
                                                         <img class="image__tag" src="images/products/product-2-70x70.jpg" alt="">
                                                     </div>
                                                 </div>
-                                                <div class="product-gallery__thumbnails-item image image--type--product">
+                                                <div class="product-gallery__thumbnails-item image image--type--product zv-img70">
                                                     <div class="image__body">
                                                         <img class="image__tag" src="images/products/product-1-70x70.jpg" alt="">
                                                     </div>
                                                 </div>
-                                                <div class="product-gallery__thumbnails-item image image--type--product">
+                                                <div class="product-gallery__thumbnails-item image image--type--product zv-img70">
                                                     <div class="image__body">
                                                         <img class="image__tag" src="images/products/product-3-70x70.jpg" alt="">
-                                                    </div>
-                                                </div>
-                                                <div class="product-gallery__thumbnails-item image image--type--product">
-                                                    <div class="image__body">
-                                                        <img class="image__tag" src="images/products/product-4-70x70.jpg" alt="">
                                                     </div>
                                                 </div>
                                             </div>
