--- a/search.html
+++ b/search.html
@@ -38,8 +38,8 @@
                 </div>
                 <div class="block-finder__image" style="background-image: url('images/finder-1903x500.jpg');"></div>
                 <div class="block-finder__body container container--max--xl">
-                    <div class="block-finder__title">Поиск аналогов</div>
-                    <div class="block-finder__subtitle">Использование отечественного ПО в сфере проектирования зданий и сооружений</div>
+                    <div class="block-finder__title"><a style="color: white;" href="https://thisvalery.github.io/software-selection/"> Поиск аналогов</a></div>
+                    <div class="block-finder__subtitle"><a style="color: white;" href="https://thisvalery.github.io/software-selection/">Использование отечественного ПО в сфере проектирования зданий и сооружений</a></div>
                     <form class="block-finder__form">
                         <div class="col">
                             <div class="row">
