--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                         <div class="decor__center"></div>
                     </div>
                 </div>
-                <div class="block-finder__image" style="background-image: url('images/finder-1903x500.jpg');"></div>
+                <div class="block-finder__image" style="background-image: url('images/finder-1903x500-2.jpg');"></div>
                 <div class="block-finder__body container container--max--xl">
                     <div class="block-finder__title">Поиск аналогов</div>
                     <div class="block-finder__subtitle">Использование отечественного ПО в сфере проектирования зданий и сооружений</div>
@@ -206,8 +206,8 @@
                 <div class="container">
                     <div class="block-banners__list">
                         <a href="https://www.garant.ru/products/ipo/prime/doc/402553600/" class="block-banners__item block-banners__item--style--one">
-                            <span class="block-banners__item-image"><img src="images/banners/banner1.jpg" alt=""></span>
-                            <span class="block-banners__item-image block-banners__item-image--blur"><img src="images/banners/banner1.jpg" alt=""></span>
+                            <span class="block-banners__item-image"><img src="images/prikaz.jpg" alt=""></span>
+                            <span class="block-banners__item-image block-banners__item-image--blur"><img src="images/prikaz.jpg" alt=""></span>
                             <span class="block-banners__item-title" style="font-size: 27px">Приказ об импортозамещении</span>
                             <span class="block-banners__item-details">
                                 Работы по формированию планов по импортозамещению<br>
@@ -217,9 +217,9 @@
                                 Ознакомиться
                             </span>
                         </a>
-                        <a href="https://reestr.digital.gov.ru/reestr/реестр оттеественного по" class="block-banners__item block-banners__item--style--two">
-                            <span class="block-banners__item-image"><img src="images/banners/banner2.jpg" alt=""></span>
-                            <span class="block-banners__item-image block-banners__item-image--blur"><img src="images/banners/banner2.jpg" alt=""></span>
+                        <a href="https://reestr.digital.gov.ru/reestr/" class="block-banners__item block-banners__item--style--two">
+                            <span class="block-banners__item-image"><img src="images/reestr.jpg" alt=""></span>
+                            <span class="block-banners__item-image block-banners__item-image--blur"><img src="images/reestr.jpg" alt=""></span>
                             <span class="block-banners__item-title">Реестр отечественного ПО</span>
                             <span class="block-banners__item-details">
                                 Публичная электронная система учёта ПО,<br>
@@ -251,11 +251,13 @@
                         <div class="site-footer__bottom-row">
                             <div class="site-footer__copyright">
                                 <!-- copyright -->
-                                Работа выполнена __________ для конкурса __________
+                                Работа выполнена Санниковой Татьяной Николаевной для конкурса научно-исследовательских проектов школьников "Ступени"
                                 <!-- copyright / end -->
                             </div>
                             <div class="site-footer__payments">
-                                <img src="images/payments.png" alt="">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-graph-up" viewBox="0 0 16 16">
+                                    <path fill-rule="evenodd" d="M0 0h1v15h15v1H0zm14.817 3.113a.5.5 0 0 1 .07.704l-4.5 5.5a.5.5 0 0 1-.74.037L7.06 6.767l-3.656 5.027a.5.5 0 0 1-.808-.588l4-5.5a.5.5 0 0 1 .758-.06l2.609 2.61 4.15-5.073a.5.5 0 0 1 .704-.07"/>
+                                </svg>
                             </div>
                         </div>
                     </div>
