--- a/product.html
+++ b/product.html
@@ -29,7 +29,7 @@
         <!-- site__body -->
         <div class="site__body">
             <div class="block-finder block" style="height: 200px;">
-                <div class="block-finder__image" style="background-image: url('images/finder-1903x500.jpg');"></div>
+                <div class="block-finder__image" style="background-image: url('images/finder-1903x500-2.jpg');"></div>
                 <div class="block-finder__body container container--max--xl" style="margin-bottom: -40px;">
                     <div class="block-finder__title"><a style="color: white;" href="https://thisvalery.github.io/software-selection/"> Поиск аналогов</a></div>
                     <div class="block-finder__subtitle"><a style="color: white;" href="https://thisvalery.github.io/software-selection/">Использование отечественного ПО в сфере проектирования зданий и сооружений</a></div>
@@ -275,11 +275,13 @@
                         <div class="site-footer__bottom-row">
                             <div class="site-footer__copyright">
                                 <!-- copyright -->
-                                Работа выполнена __________ для конкурса __________
+                                Работа выполнена Санниковой Татьяной Николаевной для конкурса научно-исследовательских проектов школьников "Ступени"
                                 <!-- copyright / end -->
                             </div>
                             <div class="site-footer__payments">
-                                <img src="images/payments.png" alt="">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-graph-up" viewBox="0 0 16 16">
+                                    <path fill-rule="evenodd" d="M0 0h1v15h15v1H0zm14.817 3.113a.5.5 0 0 1 .07.704l-4.5 5.5a.5.5 0 0 1-.74.037L7.06 6.767l-3.656 5.027a.5.5 0 0 1-.808-.588l4-5.5a.5.5 0 0 1 .758-.06l2.609 2.61 4.15-5.073a.5.5 0 0 1 .704-.07"/>
+                                </svg>
                             </div>
                         </div>
                     </div>
