--- a/index.html
+++ b/index.html
@@ -205,10 +205,10 @@
             <div class="block-banners block">
                 <div class="container">
                     <div class="block-banners__list">
-                        <a href="https://www.garant.ru/products/ipo/prime/doc/402553600/" class="block-banners__item block-banners__item--style--one">
+                        <a href="http://publication.pravo.gov.ru/Document/View/0001202203300001" class="block-banners__item block-banners__item--style--one">
                             <span class="block-banners__item-image"><img src="images/prikaz.jpg" alt=""></span>
                             <span class="block-banners__item-image block-banners__item-image--blur"><img src="images/prikaz.jpg" alt=""></span>
-                            <span class="block-banners__item-title" style="font-size: 27px">Приказ об импортозамещении</span>
+                            <span class="block-banners__item-title" style="font-size: 27px">Указ об импортозамещении</span>
                             <span class="block-banners__item-details">
                                 Работы по формированию планов по импортозамещению<br>
                                 в гражданских отраслях промышленности РФ
