--- a/product.html
+++ b/product.html
@@ -45,7 +45,7 @@
                                 <div class="product__body" style="grid-template-columns: auto 1fr 0px;">
                                     <div class="product__card product__card--one"></div>
                                     <div class="product__card product__card--two"></div>
-                                    <div class="product-gallery product-gallery--layout--product-full product__gallery" data-layout="product-full">
+                                    <div class="product-gallery product-gallery--layout--product-full product__gallery" data-layout="product-full" style="width: 385px;">
                                         <div class="product-gallery__featured">
                                             <button type="button" class="product-gallery__zoom">
                                                 <svg width="24" height="24">
